{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 2129,
  "lineage": "63789526-fbfc-9b4f-494b-02b0ca1a2ae6",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:862357060068:instance/i-0acb10100d9805223",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0acb10100d9805223",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b78d6d9b9796bda5",
            "private_dns": "ip-10-0-9-183.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.9.183",
            "public_ip": "13.40.132.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d32b26f58c09ca7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c86faed3474ed920",
            "tags": {
              "Managed_by": "terraform",
              "Name": "lighting-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "lighting-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047a5f22bade00444",
              "sg-0db900f335e120863"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:862357060068:instance/i-0bc733aded5a1d7ec",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc733aded5a1d7ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e41e68eff1c0b74c",
            "private_dns": "ip-10-0-5-87.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.87",
            "public_ip": "18.133.237.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a38885f22cca87e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c86faed3474ed920",
            "tags": {
              "Managed_by": "terraform",
              "Name": "heating-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "heating-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047a5f22bade00444",
              "sg-0db900f335e120863"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:862357060068:instance/i-07625e22c84ca5fcb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07625e22c84ca5fcb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-097efd359794433d9",
            "private_dns": "ip-10-0-20-252.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.252",
            "public_ip": "18.170.92.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e2448b5542b6d7e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0915a86cc1e81f7e1",
            "tags": {
              "Managed_by": "terraform",
              "Name": "heating-2"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "heating-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047a5f22bade00444",
              "sg-0db900f335e120863"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:862357060068:instance/i-0c3a950d5870994d9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3a950d5870994d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b098f550c8ea57d",
            "private_dns": "ip-10-0-41-79.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.41.79",
            "public_ip": "18.170.57.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aecba897828cc3bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021608018aceedca1",
            "tags": {
              "Managed_by": "terraform",
              "Name": "heating-3"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "heating-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047a5f22bade00444",
              "sg-0db900f335e120863"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:862357060068:instance/i-0474ab3b92d74ebb0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0474ab3b92d74ebb0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d05e9cb72ae2685d",
            "private_dns": "ip-10-0-8-224.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.224",
            "public_ip": "18.130.106.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da01d4405934fd26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c86faed3474ed920",
            "tags": {
              "Managed_by": "terraform",
              "Name": "status-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "status-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047a5f22bade00444",
              "sg-0db900f335e120863"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:862357060068:instance/i-04e5e50e5943eda7c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e5e50e5943eda7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-044c1a0542dc52ad2",
            "private_dns": "ip-10-0-21-124.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.21.124",
            "public_ip": "18.132.50.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b440072464674bce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0915a86cc1e81f7e1",
            "tags": {
              "Managed_by": "terraform",
              "Name": "status-2"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "status-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047a5f22bade00444",
              "sg-0db900f335e120863"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_lb",
      "name": "service_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:loadbalancer/app/lighting-load-balancer/920e7bc2d8ae4823",
            "arn_suffix": "app/lighting-load-balancer/920e7bc2d8ae4823",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lighting-load-balancer-811015312.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:loadbalancer/app/lighting-load-balancer/920e7bc2d8ae4823",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lighting-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-047a5f22bade00444",
              "sg-0db900f335e120863"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021608018aceedca1"
              },
              {
                "subnet_id": "subnet-0915a86cc1e81f7e1"
              },
              {
                "subnet_id": "subnet-0c86faed3474ed920"
              }
            ],
            "subnets": [
              "subnet-021608018aceedca1",
              "subnet-0915a86cc1e81f7e1",
              "subnet-0c86faed3474ed920"
            ],
            "vpc_id": "vpc-035e47170d4cfde3d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:loadbalancer/app/heating-load-balancer/ef3447f3114d7e2b",
            "arn_suffix": "app/heating-load-balancer/ef3447f3114d7e2b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "heating-load-balancer-2100862812.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:loadbalancer/app/heating-load-balancer/ef3447f3114d7e2b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "heating-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-047a5f22bade00444",
              "sg-0db900f335e120863"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021608018aceedca1"
              },
              {
                "subnet_id": "subnet-0915a86cc1e81f7e1"
              },
              {
                "subnet_id": "subnet-0c86faed3474ed920"
              }
            ],
            "subnets": [
              "subnet-021608018aceedca1",
              "subnet-0915a86cc1e81f7e1",
              "subnet-0c86faed3474ed920"
            ],
            "vpc_id": "vpc-035e47170d4cfde3d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "service_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:listener/app/lighting-load-balancer/920e7bc2d8ae4823/8fc69ba5ec70a484",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/lighting-target-group/927e63fb875bb878",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:listener/app/lighting-load-balancer/920e7bc2d8ae4823/8fc69ba5ec70a484",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:loadbalancer/app/lighting-load-balancer/920e7bc2d8ae4823",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instances.aws_lb.service_lb",
            "module.ec2_instances.aws_lb_target_group.service_target_group",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:listener/app/heating-load-balancer/ef3447f3114d7e2b/1bd6272ab0270956",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/heating-target-group/7aaf75bc3ef4b17a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:listener/app/heating-load-balancer/ef3447f3114d7e2b/1bd6272ab0270956",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:loadbalancer/app/heating-load-balancer/ef3447f3114d7e2b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instances.aws_lb.service_lb",
            "module.ec2_instances.aws_lb_target_group.service_target_group",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "service_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/lighting-target-group/927e63fb875bb878",
            "arn_suffix": "targetgroup/lighting-target-group/927e63fb875bb878",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/lighting-target-group/927e63fb875bb878",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lighting-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/heating-target-group/7aaf75bc3ef4b17a",
            "arn_suffix": "targetgroup/heating-target-group/7aaf75bc3ef4b17a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/heating-target-group/7aaf75bc3ef4b17a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "service_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/lighting-target-group/927e63fb875bb878-20231207132839939200000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/lighting-target-group/927e63fb875bb878",
            "target_id": "i-0acb10100d9805223"
          },
          "dependencies": [
            "module.ec2_instances.aws_instance.web",
            "module.ec2_instances.aws_lb.service_lb",
            "module.ec2_instances.aws_lb_listener.service_listener",
            "module.ec2_instances.aws_lb_target_group.service_target_group",
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/heating-target-group/7aaf75bc3ef4b17a-20231207132839950700000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:862357060068:targetgroup/heating-target-group/7aaf75bc3ef4b17a",
            "target_id": "i-0bc733aded5a1d7ec"
          },
          "dependencies": [
            "module.ec2_instances.aws_instance.web",
            "module.ec2_instances.aws_lb.service_lb",
            "module.ec2_instances.aws_lb_listener.service_listener",
            "module.ec2_instances.aws_lb_target_group.service_target_group",
            "module.ec2_instances.data.aws_ami.ubuntu",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.custom_ingress",
            "module.security_groups.aws_security_group.front_facing",
            "module.security_groups.aws_security_group.ssh_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:route-table/rtb-0b7b910a68fa2c5c4",
            "default_route_table_id": "rtb-0b7b910a68fa2c5c4",
            "id": "rtb-0b7b910a68fa2c5c4",
            "owner_id": "862357060068",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "private-route-table"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:internet-gateway/igw-0fe64cc1e523fc6d6",
            "id": "igw-0fe64cc1e523fc6d6",
            "owner_id": "862357060068",
            "tags": {
              "Managed_by": "terraform",
              "Name": "terraform-project-gateway"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "terraform-project-gateway"
            },
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fe64cc1e523fc6d6",
            "id": "r-rtb-0da0cee0f07b810ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da0cee0f07b810ff",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:route-table/rtb-0da0cee0f07b810ff",
            "id": "rtb-0da0cee0f07b810ff",
            "owner_id": "862357060068",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Managed_by": "terraform",
              "Name": "public-route-table"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bf59a88dd5bc41e",
            "route_table_id": "rtb-0b7b910a68fa2c5c4",
            "subnet_id": "subnet-006db70eaa6333b50"
          },
          "dependencies": [
            "module.network.aws_default_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0870c1e57220dac27",
            "route_table_id": "rtb-0b7b910a68fa2c5c4",
            "subnet_id": "subnet-07a70a05c88115112"
          },
          "dependencies": [
            "module.network.aws_default_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3d197013ab6a688",
            "route_table_id": "rtb-0b7b910a68fa2c5c4",
            "subnet_id": "subnet-0bd3591df14f46439"
          },
          "dependencies": [
            "module.network.aws_default_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08df81c0048f3e27f",
            "route_table_id": "rtb-0da0cee0f07b810ff",
            "subnet_id": "subnet-0c86faed3474ed920"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07295c9e63dfc47dd",
            "route_table_id": "rtb-0da0cee0f07b810ff",
            "subnet_id": "subnet-0915a86cc1e81f7e1"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cffcba900e186bd",
            "route_table_id": "rtb-0da0cee0f07b810ff",
            "subnet_id": "subnet-021608018aceedca1"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:subnet/subnet-006db70eaa6333b50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006db70eaa6333b50",
            "ipv6_cidr_block": "2a05:d01c:47:b603::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b2174cd174f3c59e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862357060068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "terraform-project-private-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "terraform-project-private-1"
            },
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:subnet/subnet-07a70a05c88115112",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a70a05c88115112",
            "ipv6_cidr_block": "2a05:d01c:47:b604::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-097a5ba03e7cea66f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862357060068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "terraform-project-private-2"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "terraform-project-private-2"
            },
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:subnet/subnet-0bd3591df14f46439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd3591df14f46439",
            "ipv6_cidr_block": "2a05:d01c:47:b605::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0fe6bafdf9be85622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862357060068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "terraform-project-private-3"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "terraform-project-private-3"
            },
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:subnet/subnet-0c86faed3474ed920",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c86faed3474ed920",
            "ipv6_cidr_block": "2a05:d01c:47:b600::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0156220873f8e123e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862357060068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "terraform-project-public-1"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "terraform-project-public-1"
            },
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:subnet/subnet-0915a86cc1e81f7e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0915a86cc1e81f7e1",
            "ipv6_cidr_block": "2a05:d01c:47:b601::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-03c8df5e63ea1c959",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862357060068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "terraform-project-public-2"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "terraform-project-public-2"
            },
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:subnet/subnet-021608018aceedca1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021608018aceedca1",
            "ipv6_cidr_block": "2a05:d01c:47:b602::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-02fb84e1817d24a63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862357060068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed_by": "terraform",
              "Name": "terraform-project-public-3"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "terraform-project-public-3"
            },
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:vpc/vpc-035e47170d4cfde3d",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d581deb8357811b",
            "default_route_table_id": "rtb-0b7b910a68fa2c5c4",
            "default_security_group_id": "sg-0efcc4993a57b2032",
            "dhcp_options_id": "dopt-0e52407795bb49996",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035e47170d4cfde3d",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0d4a7310044b71494",
            "ipv6_cidr_block": "2a05:d01c:47:b600::/56",
            "ipv6_cidr_block_network_border_group": "eu-west-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7b910a68fa2c5c4",
            "owner_id": "862357060068",
            "tags": {
              "Managed_by": "terraform",
              "Name": "terraform-project"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "terraform-project"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_facing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:security-group/sg-047a5f22bade00444",
            "description": "HTTP/HTTPS oubound rule",
            "egress": [],
            "id": "sg-047a5f22bade00444",
            "ingress": [],
            "name": "front_facing-nc",
            "name_prefix": "",
            "owner_id": "862357060068",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "http_front_facing-nc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "http_front_facing-nc"
            },
            "timeouts": null,
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:security-group/sg-0db900f335e120863",
            "description": "Security group for SSH",
            "egress": [],
            "id": "sg-0db900f335e120863",
            "ingress": [
              {
                "cidr_blocks": [
                  "94.196.132.229/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-nc",
            "name_prefix": "",
            "owner_id": "862357060068",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed_by": "terraform",
              "Name": "SSH"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-035e47170d4cfde3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:security-group-rule/sgr-04698793e4e458930",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "accepting all outbound traffic on ipv4",
            "from_port": null,
            "id": "sgr-04698793e4e458930",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047a5f22bade00444",
            "security_group_rule_id": "sgr-04698793e4e458930",
            "tags": {
              "Managed_by": "terraform",
              "Name": "all-traffic-ipv4-nc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "all-traffic-ipv4-nc"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.front_facing"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outgoing_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:security-group-rule/sgr-000954ae623d842be",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "accepting all outbound traffic on ipv6",
            "from_port": null,
            "id": "sgr-000954ae623d842be",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047a5f22bade00444",
            "security_group_rule_id": "sgr-000954ae623d842be",
            "tags": {
              "Managed_by": "terraform",
              "Name": "all-traffic-ipv6-nc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "all-traffic-ipv6-nc"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.front_facing"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:security-group-rule/sgr-0336a1d009c59d251",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP connection for ipv4",
            "from_port": 80,
            "id": "sgr-0336a1d009c59d251",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047a5f22bade00444",
            "security_group_rule_id": "sgr-0336a1d009c59d251",
            "tags": {
              "Managed_by": "terraform",
              "Name": "IPv4-nc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "IPv4-nc"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.front_facing"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:security-group-rule/sgr-0dabb27baa574b55e",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "HTTP connection for ipv6",
            "from_port": 80,
            "id": "sgr-0dabb27baa574b55e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047a5f22bade00444",
            "security_group_rule_id": "sgr-0dabb27baa574b55e",
            "tags": {
              "Managed_by": "terraform",
              "Name": "IPv6-nc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "IPv6-nc"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.front_facing"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:security-group-rule/sgr-0eef1286254a6edc9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "secure HTTPS connection for ipv4",
            "from_port": 443,
            "id": "sgr-0eef1286254a6edc9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047a5f22bade00444",
            "security_group_rule_id": "sgr-0eef1286254a6edc9",
            "tags": {
              "Managed_by": "terraform",
              "Name": "secure-IPv4-nc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "secure-IPv4-nc"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.front_facing"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:862357060068:security-group-rule/sgr-021b96d1530612537",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "secure HTTPS connection for ipv6",
            "from_port": 443,
            "id": "sgr-021b96d1530612537",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-047a5f22bade00444",
            "security_group_rule_id": "sgr-021b96d1530612537",
            "tags": {
              "Managed_by": "terraform",
              "Name": "secure-IPv6-nc"
            },
            "tags_all": {
              "Managed_by": "terraform",
              "Name": "secure-IPv6-nc"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.front_facing"
          ]
        }
      ]
    }
  ]
}